--- a/examples/design-patterns/design-patterns.csproj
+++ b/examples/design-patterns/design-patterns.csproj
@@ -45,6 +45,9 @@
     <Compile Include="observer\Subscriber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="proxy\Math.cs" />
+    <Compile Include="proxy\MathProxy.cs" />
+    <Compile Include="proxy\Operations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -52,6 +55,7 @@
   <ItemGroup>
     <Content Include=".gitignore" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
